@@ -9,10 +9,11 @@ class ServerTreeView < TreeView
   
   def initialize
     @bgcolor = NSColor.from_rgb(229, 237, 247)
+    @top_line_color = NSColor.from_rgb(173, 187, 208)
+    @bottom_line_color = NSColor.from_rgb(140, 152, 176)
     from = NSColor.from_rgb(173, 187, 208)
     to = NSColor.from_rgb(152, 170, 196)
     @gradient = GradientFill.gradientWithBeginColor_endColor(from, to)
-    @bottom_line_color = NSColor.from_rgb(140, 152, 176)
   end
   
   def acceptsFirstResponder
@@ -24,17 +25,37 @@ class ServerTreeView < TreeView
     end
   end
   
+  def update_colors
+    @bgcolor = @theme.tree_bgcolor
+    @top_line_color = @theme.tree_sel_top_line_color
+    @bottom_line_color = @theme.tree_sel_bottom_line_color
+    from = @theme.tree_sel_top_color
+    to = @theme.tree_sel_bottom_color
+    @gradient = GradientFill.gradientWithBeginColor_endColor(from, to)
+  end
+  
   def _highlightColorForCell(cell)
     nil
   end
   
   def _highlightRow_clipRect(row, rect)
     return unless NSApp.isActive
-    rect = self.rectOfRow(row)
+    frame = self.rectOfRow(row)
+    rect = frame.dup
+    rect.y += 1
+    rect.height -= 2
     @gradient.fillRect(rect)
+    
+    @top_line_color.set
+    rect = frame.dup
+    rect.height = 1
+    NSRectFill(rect)
+    
     @bottom_line_color.set
-    bottom_line_rect = NSMakeRect(NSMinX(rect), NSMaxY(rect) - 1.0, NSWidth(rect), 1.0)
-    NSRectFill(bottom_line_rect)
+    rect = frame.dup
+    rect.y = rect.y + rect.height - 1
+    rect.height = 1
+    NSRectFill(rect)
   end
   
   def drawBackgroundInClipRect(rect)
