@@ -59,8 +59,10 @@ end
 
 
 class OtherViewTheme
-  attr_reader :input_text_color, :input_text_bgcolor, :input_text_font
-  attr_reader :tree_highlight_color, :tree_newtalk_color, :tree_unread_color, :tree_font
+  attr_reader :input_text_font, :input_text_color, :input_text_bgcolor
+  attr_reader :tree_font, :tree_bgcolor, :tree_highlight_color, :tree_newtalk_color, :tree_unread_color
+  attr_reader :tree_active_color, :tree_inactive_color, :tree_sel_active_color, :tree_sel_inactive_color
+  attr_reader :tree_sel_top_line_color, :tree_sel_bottom_line_color, :tree_sel_top_color, :tree_sel_bottom_color
   attr_reader :member_list_font, :member_list_color, :member_list_bgcolor
   attr_reader :member_list_op_color
   
@@ -81,6 +83,7 @@ class OtherViewTheme
     @content = YAML.load(@filename.open)
     prev != @content
   rescue
+    @content = nil
     false
   ensure
     update
@@ -94,9 +97,20 @@ class OtherViewTheme
     @input_text_color = load_color('input-text', 'color') || NSColor.blackColor
     
     @tree_font = load_font('server-tree') || NSFont.systemFontOfSize(-1)
+    @tree_bgcolor = load_color('server-tree', 'background-color') || NSColor.from_rgb(229, 237, 247)
     @tree_highlight_color = load_color('server-tree', 'highlight', 'color') || NSColor.magentaColor
     @tree_newtalk_color = load_color('server-tree', 'newtalk', 'color') || NSColor.redColor
     @tree_unread_color = load_color('server-tree', 'unread', 'color') || NSColor.blueColor
+    
+    @tree_active_color = load_color('server-tree', 'normal', 'active', 'color') || NSColor.blackColor
+    @tree_inactive_color = load_color('server-tree', 'normal', 'inactive', 'color') || NSColor.lightGrayColor
+    
+    @tree_sel_active_color = load_color('server-tree', 'selected', 'active', 'color') || NSColor.blackColor
+    @tree_sel_inactive_color = load_color('server-tree', 'selected', 'inactive', 'color') || NSColor.grayColor    
+    @tree_sel_top_line_color = load_color('server-tree', 'selected', 'background', 'top-line-color') || NSColor.from_rgb(173, 187, 208)
+    @tree_sel_bottom_line_color = load_color('server-tree', 'selected', 'background', 'bottom-line-color') || NSColor.from_rgb(140, 152, 176)
+    @tree_sel_top_color = load_color('server-tree', 'selected', 'background', 'top-color') || NSColor.from_rgb(173, 187, 208)
+    @tree_sel_bottom_color = load_color('server-tree', 'selected', 'background', 'bottom-color') || NSColor.from_rgb(152, 170, 196)
     
     @member_list_font = load_font('member-list') || NSFont.systemFontOfSize(-1)
     @member_list_bgcolor = load_color('member-list', 'background-color') || NSColor.whiteColor
@@ -129,6 +143,8 @@ class OtherViewTheme
       font = to if to
     end
     font
+  rescue
+    nil
   end
   
   def load_color(category, *keys)
@@ -140,6 +156,8 @@ class OtherViewTheme
       return nil unless config
     end
     NSColor.from_css(config)
+  rescue
+    nil
   end
 end
 
